add test:single command

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "npm run lint && karma start --auto-watch",
+    "test:single": "npm run lint && karma start --single-run",
     "dev": "parcel src/index.html",
     "lint": "tslint --format stylish --project tsconfig.json"
   },
