--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
     "cewdi": "^0.2.4",
-    "idb": "^5.0.4"
+    "idb": "^5.0.4",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/jasmine": "^3.5.12",
+    "@types/uuid": "^8.3.0",
     "jasmine-core": "^3.6.0",
     "karma": "^5.1.1",
     "karma-chrome-launcher": "^3.1.0",
