--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@abraham/reflection": "^0.7.0",
     "cewdi": "^0.2.4",
     "idb": "^5.0.4",
+    "lit-element": "^2.4.0",
+    "page": "^1.11.6",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/jasmine": "^3.5.12",
+    "@types/page": "^1.8.0",
     "@types/uuid": "^8.3.0",
     "jasmine-core": "^3.6.0",
     "karma": "^5.1.1",
@@ -29,6 +32,7 @@
     "karma-jasmine": "^3.3.1",
     "karma-spec-reporter": "0.0.32",
     "karma-typescript": "^5.0.3",
+    "karma-typescript-es6-transform": "^5.1.0",
     "parcel-bundler": "^1.12.4",
     "tslint": "^6.1.3",
     "tslint-config-standard-plus": "^2.3.0",
