--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "npm run lint && karma start --auto-watch",
     "test:single": "npm run lint && karma start --single-run",
     "dev": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "lint": "tslint --format stylish --project tsconfig.json"
   },
   "author": "",
@@ -38,5 +39,8 @@
     "tslint": "^6.1.3",
     "tslint-config-standard-plus": "^2.3.0",
     "typescript": "^3.9.7"
-  }
+  },
+  "browserslist": [
+    "last 2 Chrome version"
+  ]
 }
