--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-typescript": "^5.0.3",
     "karma-typescript-es6-transform": "^5.1.0",
     "parcel-bundler": "^1.12.4",
+    "tslib": "^2.0.1",
     "tslint": "^6.1.3",
     "tslint-config-standard-plus": "^2.3.0",
     "typescript": "^3.9.7"
