--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,8 +42,11 @@
 
     /* Module Resolution Options */
     // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
-    // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+    "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
+    "paths": {
+      "tslib": ["node_modules/tslib/tslib.d.ts"],
+      "lit-element": ["node_modules/lit-element/lit-element.d.ts"]
+    },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": ["node_module/@types"],                       /* List of folders to include type definitions from. */
     "types": ["@types/jasmine"],                           /* Type declaration files to be included in compilation. */
