--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,12 +41,9 @@
     "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
 
     /* Module Resolution Options */
-    // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
-    "paths": {
-      "tslib": ["node_modules/tslib/tslib.d.ts"],
-      "lit-element": ["node_modules/lit-element/lit-element.d.ts"]
-    },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+    "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
+    // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
+    // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": ["node_module/@types"],                       /* List of folders to include type definitions from. */
     "types": ["@types/jasmine"],                           /* Type declaration files to be included in compilation. */
@@ -70,5 +67,5 @@
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["src", "test"]
+  "include": ["src"]
 }
