--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "idb": "^5.0.4",
     "lit-element": "^2.4.0",
     "page": "^1.11.6",
+    "tone": "^14.7.58",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
