--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-typescript": "^5.1.0",
     "karma-typescript-es6-transform": "^5.1.0",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.5.0",
     "tslib": "^2.0.1",
     "tslint": "^6.1.3",
     "tslint-config-standard-plus": "^2.3.0",
@@ -43,5 +44,8 @@
   },
   "browserslist": [
     "last 2 Chrome version"
-  ]
+  ],
+  "staticFiles": {
+    "staticPath": "assets/audio"
+  }
 }
