--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
+    "abcjs": "^5.12.0",
     "cewdi": "^0.2.4",
     "idb": "^5.0.4",
     "lit-element": "^2.4.0",
