--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma-typescript": "^5.1.0",
     "karma-typescript-es6-transform": "^5.1.0",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-bundle-visualiser": "^1.2.0",
     "parcel-plugin-static-files-copy": "^2.5.0",
     "tslib": "^2.0.1",
     "tslint": "^6.1.3",
